--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,5 @@
 Learn to make commits. (done)
 Learn about ignoring files. (done)
 Learn about branches(done)
+Learn about orphan branches(done)
+Learn about showing Git info in your command prompt
